--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "ts-reflect",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@typinghare/ts-reflect",
+  "version": "0.2.0",
+  "description": "A useful library for making your own typescript decorators.",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "scripts": {
-    "test": "jest"
+    "build": "tsc",
+    "test": "jest --coverage"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "typescript",
+    "reflect",
+    "decorator"
+  ],
+  "author": "James Chan",
+  "license": "MIT",
   "dependencies": {
     "@captemulation/get-parameter-names": "^1.4.2",
     "@types/lodash": "^4.14.191",
