--- a/.gitignore
+++ b/.gitignore
@@ -182,7 +182,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -209,3 +208,5 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+/coverage
+/dist
